@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.21 2002/09/04 02:50:27 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.22 2002/09/04 02:53:33 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1366,3 +1366,7 @@ etc/etc.i386/ttys				1.12
 usr.bin/getconf/getconf.c			1.17-1.18
   Fix acient cut and paste error which made "_POSIX_PATH_MAX" actually
   return "_POSIX_PIPE_BUF".
+
+sys/kern/tty.c					1.139
+  Make sure repeated TIOCSCTTY doesn't corrupt session hold count.
+  Fixes kern/17382 by David Laight.
